[package]
name = "mc-router"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
